fixed white-spacing

--- a/src/app/components/api-graphical-documentation/api-graphical-documentation.component.css
+++ b/src/app/components/api-graphical-documentation/api-graphical-documentation.component.css
@@ -115,3 +115,7 @@
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
 }
+
+code {
+  white-space: pre-wrap;
+}
